// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para el Componente Principal <GifExpertApp/> Debe renderizar el componente correctamente y hacer un snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas para el Componente Principal <GifExpertApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="one piece"
      key="one piece"
    />
    <GifGrid
      category="noragami"
      key="noragami"
    />
  </ol>
</Fragment>
`;
